1. Modified vendor as company and responsible

--- a/docu_worklow/views/vendor_document_views.xml
+++ b/docu_worklow/views/vendor_document_views.xml
@@ -41,6 +41,7 @@
                             </group>
                             <group>
                                 <field name="submission_date"/>
+                                <field name="responsible_user_id"/>
                             </group>
                         </group>
 
