--- a/plm/views/product_product.xml
+++ b/plm/views/product_product.xml
@@ -369,6 +369,16 @@
 					           attrs="{'readonly':[('engineering_state','in',['released','obsoleted'])]}"/>
 					    <field name="engineering_treatment"
 					           attrs="{'readonly':[('engineering_state','in',['released','obsoleted'])]}" colspan="2" groups='base.group_no_one'/>
+                        <separator string="Additional Technical Information" colspan="4"/>
+                        <field name="technical_attribute_ids" colspan="4" nolabel="1"
+                               attrs="{'readonly':[('engineering_state','in',['released','obsoleted'])]}">
+                            <tree editable="bottom">
+                                <field name="sequence" widget="handle"/>
+                                <field name="attribute_name" placeholder="e.g., Weight, Density, Hardness"/>
+                                <field name="attribute_value" placeholder="Enter value"/>
+                                <field name="readonly_state" invisible="1"/>
+                            </tree>
+                        </field>
 					</group>
 					<group col="4" colspan="4" name="workflow_section" string="Workflow">
 						<field name="engineering_release_user"   readonly="1"/>
